samples/_failures_safe/1761399560_ebbc8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe9f3822.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
